--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,14 @@ cache:
     - $HOME/.cache/pip
 
 install:
+  - pip install "$DJANGO"
   - pip install -r requirements-dev.txt
+
+env:
+  matrix:
+   - DJANGO="Django<1.9"
+   - DJANGO="Django<1.10"
+   - DJANGO="Django<1.11"
 
 script:
   - make check coverage
