--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
    - DJANGO="Django<1.9"
    - DJANGO="Django<1.10"
    - DJANGO="Django<1.11"
+   - DJANGO="Django<1.12"
 
 script:
   - make check coverage
