--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@ django-oauth-toolkit==1.0.0
 djangorestframework==3.7.1
 flake8==3.5.0
 isort==4.2.15
-mixer==5.6.6
+model-mommy==1.6.0
 mkdocs==0.17.0
 mock==2.0.0
 pytest-cov==2.5.1
