--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ env:
   matrix:
     - DJANGO="Django<1.11"
     - DJANGO="Django<1.12"
+    - DJANGO="Django<2.1"
+    - DJANGO="Django<2.2"
 
 script:
   - make check coverage
