Add tests folder to known_first_party setting of isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal=1
 
 [isort]
-known_first_party=django_toolkit
+known_first_party=django_toolkit,tests
 atomic=true
 line_length=79
 multi_line_output=3
