--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,7 +11,9 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    container:
+      image: python:2.7.18-buster
     strategy:
       matrix:
         python-version: ["2.7"]
