--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,14 +10,13 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-20.04
-    container:
-      image: python:2.7.18-buster
     strategy:
       matrix:
         python-version: ["2.7"]
         dependency: ["django","none"]
+    runs-on: ubuntu-20.04
+    container:
+      image: python:${{ matrix.python-version }}-slim
 
     steps:
     - uses: actions/checkout@v2.3.4
