--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,16 +15,13 @@ jobs:
         python-version: ["2.7"]
         dependency: ["django"]
     runs-on: ubuntu-20.04
-    container:
-      image: python:${{ matrix.python-version }}-slim
-
     steps:
-    - uses: actions/checkout@v2.3.4
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: LizardByte/setup-python-action@master
       with:
         python-version: ${{ matrix.python-version }}
-    
+      
     - name: Install dependencies
       run: |
         if [ ${{ matrix.dependency }} == django ]; then pip install Django<2.2; fi
