--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -36,6 +36,10 @@ jobs:
         make test check coverage
         codecov
 
+    - name: Build
+      run:
+        python setup.py sdist bdist_whee
+    
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@master
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
