--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         # if [ ${{ matrix.dependency }} == django ]; then pip install Django<2.2; fi
         pip install -r requirements-dev.txt
-        pip install codecov pyOpenSSL wheel
+        pip install -U pip wheel setuptools
 
 
     - name: Run tests
