ajust github action build

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Build
       run: |
         pip install -U pip wheel setuptools 
-        python setup.py sdist bdist_whee
+        python setup.py sdist bdist_wheel
     
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@master
